--- a/src/app/authentication/signin/signin.component.html
+++ b/src/app/authentication/signin/signin.component.html
@@ -7,8 +7,13 @@
     <div class="col-sm-6 auth-form-section">
       <div class="form-section">
         <div class="auth-wrapper">
-          <h2 class="welcome-msg"> Welcome to Cliniva </h2>
-          <!-- <p class="auth-signup-text text-muted">Need an account?<a routerLink="/authentication/signup"
+          <h2 class="welcome-msg"> Welcome to DAC </h2>
+          <p class="auth-signup-text text-muted">Need an account?<a 
+            
+              class="sign-up-link">Sign Up
+            </a></p>
+          <!-- <p class="auth-signup-text text-muted">Need an account?<a 
+            routerLink="/authentication/signup"
               class="sign-up-link">Sign Up
             </a></p> -->
           <!-- <div class="d-flex justify-content-between lbl-alert mb-3">
@@ -82,7 +87,7 @@
               </div>
             </div>
           </form>
-          <!-- <h6 class="social-login-title">OR</h6>
+          <h6 class="social-login-title">OR</h6>
           <ul class="list-unstyled social-icon mb-0 mt-3">
             <li class="list-inline-item"><a href="javascript:void(0)" class="rounded">
                 <i class="fab fa-google"></i>
@@ -96,7 +101,7 @@
             <li class="list-inline-item"><a href="javascript:void(0)" class="rounded">
                 <i class="fab fa-linkedin-in"></i>
               </a></li>
-          </ul> -->
+          </ul>
         </div>
       </div>
     </div>
