--- a/src/app/admin/users/dialog/usersdialog/usersdialog.component.html
+++ b/src/app/admin/users/dialog/usersdialog/usersdialog.component.html
@@ -15,9 +15,9 @@
       <div mat-dialog-content>
         <form class="register-form m-4" [formGroup]="formdata">
           <div class="row">
-            <div class="col-md-6  mb-2" [ngClass]="{'col-md-12':data.popupForm!='roleDailog' && data.tabledatadeatils.dailogPage!='roleDailog'}">
+            <div class="col-md-6  mb-2" [ngClass]="{'col-md-12':data.tabledatadeatils.dailogPage!='userDailog'}">
               <mat-form-field class="example-full-width" appearance="outline">
-                <mat-label>{{data.popupForm!='roleDailog' && data.tabledatadeatils.dailogPage!='roleDailog'?'First Name':'Name'}}</mat-label>
+                <mat-label>{{data.tabledatadeatils.dailogPage!='userDailog'?'First Name':'Name'}}</mat-label>
                 <input matInput formControlName="CommonName">
                 <!-- <mat-icon matSuffix>face</mat-icon> -->
                 <mat-error *ngIf="formdata.get('CommonName').hasError('required')">
@@ -73,9 +73,9 @@
            
             <mat-form-field class="example-full-width" appearance="outline">
               <mat-label>Select office</mat-label>
-              <mat-select formControlName="office" (change)="change($event)">
+              <mat-select formControlName="office" (selectionChange)="change($event)">
                 <mat-option *ngFor="let item of data.tabledatadeatils.officelist" [value]="item.office_id">
-                  {{ item.office_name }}
+                  {{ item.office_name }}{{item.office_id}}
                 </mat-option>
               </mat-select>
             </mat-form-field>
@@ -101,7 +101,7 @@
         <div class="row">
             <div class="col-md-12 col-sm-12 mb-2">
               <mat-form-field class="example-full-width" appearance="outline">
-                <mat-label>Description</mat-label>
+                <mat-label>{{this.data.tabledatadeatils.dailogPage=='userDailog'?'Address':'Description'}}</mat-label>
                 <textarea matInput formControlName="description"></textarea>
                
                 <!-- <mat-icon matSuffix>face</mat-icon> -->
