--- a/src/app/authentication/signin/signin.component.html
+++ b/src/app/authentication/signin/signin.component.html
@@ -8,7 +8,8 @@
       <div class="form-section">
         <div class="auth-wrapper">
           <h2 class="welcome-msg"> Welcome to DAC </h2>
-          <p class="auth-signup-text text-muted">Need an account?<a 
+          <p class="auth-signup-text text-muted">Need an account?
+            <a   routerLink="/authentication/signup"
             
               class="sign-up-link">Sign Up
             </a></p>
