--- a/src/app/authentication/signin/signin.component.html
+++ b/src/app/authentication/signin/signin.component.html
@@ -34,7 +34,7 @@
               <div class="col-xl-12 col-lg-12 col-md-12 col-sm-12 mb-2">
                 <mat-form-field appearance="outline" class="example-full-width">
                   <mat-label>Select</mat-label>
-                  <mat-select formControlName="companyid">
+                  <mat-select formControlName="clientid">
                     <mat-option *ngFor="let client of clientDetails" [value]="client.company_id">
                       {{client.name}}
                     </mat-option>
@@ -46,7 +46,7 @@
               <div class="col-xl-12 col-lg-12 col-md-12 col-sm-12 mb-2">
                 <mat-form-field class="example-full-width" appearance="outline">
                   <mat-label>Username</mat-label>
-                  <input matInput formControlName="username" />
+                  <input matInput type="email" formControlName="username" />
                   <mat-icon matSuffix class="face-icon">face</mat-icon>
                   <mat-error *ngIf="authForm.get('username').hasError('required')">
                     Username is required
