--- a/src/app/shared/components/file-upload/file-upload.component.scss
+++ b/src/app/shared/components/file-upload/file-upload.component.scss
@@ -15,7 +15,7 @@
   height: 100%;
   width: 100%;
   cursor: pointer;
-  opacity: 0;
+  opacity: 0; z-index: 1;
 }
 .file-msg {
   display: inline-block;
