--- a/src/app/awb-stock/dialog/add-awb-purchase/add-awb-purchase.component.html
+++ b/src/app/awb-stock/dialog/add-awb-purchase/add-awb-purchase.component.html
@@ -12,7 +12,7 @@
             <mat-icon>close</mat-icon>
         </button>
     </div>
-    <div mat-dialog-content style="overflow: visible;">
+    <div mat-dialog-content style="overflow: auto;min-height: 87vh;">
         <form class="register-form m-4" [formGroup]="formdata">
 
             <div class="row">
