--- a/src/app/layout/header/header.component.html
+++ b/src/app/layout/header/header.component.html
@@ -75,7 +75,7 @@
         <li class="nav-item user_profile">
           <button mat-button [matMenuTriggerFor]="profilemenu">
             <div class="chip dropdown-toggle" ngbDropdownToggle class="">
-              <span>Ella Jones</span>
+              <span>{{userFullName}}</span>
               <img src="{{userImg}}" class="user_img" width="32" height="32" alt="User">
             </div>
           </button>
@@ -83,7 +83,7 @@
             <div class="noti-list">
               <div class="menu ">
                 <div class="user_dw_menu">
-                  <button mat-menu-item>
+                  <button mat-menu-item routerLink="admin/users/profile">
                     <app-feather-icons [icon]="'user'" [class]="'user-menu-icons'"></app-feather-icons>Account
                   </button>
                   <button mat-menu-item>
